--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -3,20 +3,35 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Baghiut_Andreea_Lab7.ListPage"
              Title="ListPage">
-    <StackLayout Margin="20">
-        <Editor Placeholder="Enter the description of the shopping list"
+    <ContentPage.Content xmlns:local="clr-namespace:Baghiut_Andreea_Lab7">
+        <StackLayout Margin="20">
+            <Editor Placeholder="Enter the description of the shopping list"
  Text="{Binding Description}"
- HeightRequest="100" />
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Button Text="Save"
-                 Clicked="OnSaveButtonClicked" />
-                        <Button Grid.Column="1"
-                 Text="Delete"
-                 Clicked="OnDeleteButtonClicked"/>      
-        </Grid>
-    </StackLayout>
+ HeightRequest="50" >
+            </Editor>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Button Text="Save"
+ Clicked="OnSaveButtonClicked" />
+                <Button Grid.Column="1"
+ Text="Delete"
+ Clicked="OnDeleteButtonClicked"/>
+
+            </Grid>
+            <ListView x:Name="listView"
+ Margin="20">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Detail="{Binding Description}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
+Clicked="OnChooseButtonClicked"/>
+            <Button Text="Delete Item" Clicked="OnDeleteItemClicked"/>
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
